--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #instructions {
-    background: #fffc94;
+    background: #c2ff87;
     width: 400px;
     padding: 20px;
     margin: 20px;
