More FAQ, header comments

--- a/public/faq.css
+++ b/public/faq.css
@@ -1,3 +1,7 @@
+/*
+Copyright 2020 William Locatelli.
+CSS styling for FAQ page for Marvel Movie Wizard Helper App.
+ */
 body {
     width: 50%;
 }
