Most Recent now works as expected!

--- a/public/styles.css
+++ b/public/styles.css
@@ -27,6 +27,10 @@ ol, ul {
     text-align: left;
 }
 
+h1 {
+    padding: 10px;
+}
+
 #movies div {
     display: flex;
     flex-direction: column;
