--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,10 @@ body {
 
 a {
     color: #575757;
-    text-decoration: none;
+}
+
+#instructions a {
+    text-decoration: underline;
 }
 
 a:hover {
