--- a/public/styles.css
+++ b/public/styles.css
@@ -145,3 +145,28 @@ h3 {
 .requested {
     font-style: italic;
 }
+
+.youtube-outer-container {
+    /*max-width: 500px;
+    max-height: 281px;*/
+    /*justify-self: center;*/
+}
+
+.youtube-inner-container {
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    width: 98%;
+    padding-top: 55.13%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
