--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,14 @@ a {
     text-decoration: none;
 }
 
+#subheading {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 100%;
+    margin: 0 5px 15px;
+    color: #929292;
+}
+
 #instructions a {
     text-decoration: underline;
 }
