--- a/public/styles.css
+++ b/public/styles.css
@@ -57,15 +57,16 @@ h1 {
 #main {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: center;
 }
 
 #instructions {
     background: #fffc94;
     width: 400px;
+    height: fit-content;
     padding: 20px;
-    margin: 20px;
+    margin: 0 20px 20px;
     border-radius: 10px;
 }
 
@@ -116,6 +117,10 @@ h3 {
     background-color: lightblue;
 }
 
+#movies p.seen:hover {
+    background-color: #97becc;
+}
+
 #count {
     align-self: center;
 }
@@ -124,12 +129,12 @@ h3 {
     display: none;
 }
 
-#movies p.selected {
+/*#movies p.selected {
     background-color: lightgreen;
-    /*outline: 2px solid black;*/
-}
+    /*outline: 2px solid black;*//*
+}*/
 
-#movies p.selected:hover {
+#movies p.wantToSee:hover {
     background-color: rgba(50,120,60,0.51);
 }
 
@@ -138,11 +143,13 @@ h3 {
 }
 
 #movies p.wantToSee {
-    background-color: #ffba69;
+    /*background-color: #ffba69;*/
+    background-color: lightgreen;
 }
 
 #movies p.seen {
-    background-color: #84fffa;
+    color: rgba(99,99,99,0.65);
+    border-color: rgba(99,99,99,0.65);
 }
 
 #recs {
